eks_llm_sample/app/tgw-neuron-engine/config/ns-tgw-neuron.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tgw-neuron
  labels:
    name: tgw-neuron
